--- a/05-singleton-begin/Requirements.txt
+++ b/05-singleton-begin/Requirements.txt
@@ -1,8 +1,9 @@
 Đề bài:
 =======
 
-Hãy tận dụng class LineGroup để vẽ các đường chéo lên trên đối tượng đồ họa của lớp Board. Với yêu cầu phải dùng được hàm drawBoardItem của lớp Board.
+Sử dụng Singleton pattern để code lại GlobalClass sao cho tại mọi nơi trong chương trình chỉ có thể truy cập vào một instance
+duy nhất của class này.
 
 Hướng dẫn:
-- Sử dụng Adapter design patterns để thiết kế lớp MyBoardItem, thừa kế từ BoardItem và "adapt" hàm "draw" của lớp LineGroup thành hàm "drawLine" của lớp BoardItem.
-- Trong class Main hãy thêm đoạn code sử dụng MyBoardItem vào cuối hàm "drawBoardButton_clickHandler"
+- Viết thêm hàm static getInstance() vào class GlobalClass
+- Sử dụng GlobalClass.getInstance() mỗi khi cần truy cập vào (singleton) object của GlobalClass
